--- a/src/ui/MainWindow.xaml
+++ b/src/ui/MainWindow.xaml
@@ -7,9 +7,9 @@
         xmlns:local="clr-namespace:wpf_demo"
         mc:Ignorable="d"
         Name="Fenster"
-        Title="MainWindow"
-        Height="1280"
-        Width="720">
+        Title="BGL WPF Tech Demo"
+        Height="512"
+        Width="512">
     <Grid ShowGridLines="True"
           Name="Grid">
         <Grid.ColumnDefinitions>
@@ -17,8 +17,7 @@
             <ColumnDefinition Width="0.75*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.2*" />
-            <RowDefinition Height="300" />
+            <RowDefinition Height="1.0*" />
         </Grid.RowDefinitions>
         <DockPanel Grid.Column="0"
                    Grid.Row="0">
