--- a/AnimationViewer/MainWindow.xaml
+++ b/AnimationViewer/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AnimationViewer.MainWindow"
+﻿<Window x:Class="AnimationEditor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
